k8s/dev-api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubeportal-api-dev-service
  namespace: sachs
spec:
  ports:
  - protocol: TCP
    port: 8000
  selector:
    app: kubeportal-api-dev
