k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubeportal-api
  namespace: kubeportal
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app.kubernetes.io/name: kubeportal-api
---
apiVersion: v1
kind: Service
metadata:
  name: kubeportal-frontend
  namespace: kubeportal
spec:
  ports:
  - port: 8086
    protocol: TCP
  selector:
    app.kubernetes.io/name: kubeportal-frontend
